[gd_scene load_steps=10 format=3 uid="uid://xlbaquyeba6q"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_8ppc3"]
[ext_resource type="Texture2D" uid="uid://k4bvwqfs3p0m" path="res://assets/sprites/slime_green.png" id="1_64j7k"]
[ext_resource type="PackedScene" uid="uid://cvc5pvjx0xp8q" path="res://scenes/damage_zone.tscn" id="3_vf3v2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uiw15"]
atlas = ExtResource("1_64j7k")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dndar"]
atlas = ExtResource("1_64j7k")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_651hy"]
atlas = ExtResource("1_64j7k")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s11ir"]
atlas = ExtResource("1_64j7k")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_f01qk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiw15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dndar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_651hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s11ir")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lxuyo"]
radius = 6.0

[node name="Slime" type="Node2D"]
script = ExtResource("1_8ppc3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f01qk")
autoplay = "default"

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(8, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-8, 0)

[node name="DamageZone" parent="." instance=ExtResource("3_vf3v2")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_lxuyo")
